--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
             <groupId>org.apache.jena</groupId>
             <artifactId>jena</artifactId>
             <version>4.7.0</version>
+            <type>pom</type>
         </dependency>
         <dependency>
             <groupId>org.apache.jena</groupId>
@@ -58,37 +59,56 @@
         <dependency>
             <groupId>org.eclipse.rdf4j</groupId>
             <artifactId>rdf4j-model</artifactId>
-            <version>3.7.4</version>
+            <version>4.2.3</version>
         </dependency>
         <dependency>
             <groupId>org.eclipse.rdf4j</groupId>
             <artifactId>rdf4j</artifactId>
-            <version>3.7.4</version>
+            <version>4.2.3</version>
+            <type>pom</type>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.eclipse.rdf4j/rdf4j-sail -->
         <dependency>
             <groupId>org.eclipse.rdf4j</groupId>
             <artifactId>rdf4j-sail</artifactId>
-            <version>3.7.4</version>
+            <version>4.2.3</version>
+            <type>pom</type>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.eclipse.rdf4j/rdf4j-repository -->
+        <dependency>
+            <groupId>org.eclipse.rdf4j</groupId>
+            <artifactId>rdf4j-repository</artifactId>
+            <version>4.2.3</version>
+            <type>pom</type>
+        </dependency>
+
+        <dependency>
+            <groupId>org.eclipse.rdf4j</groupId>
+            <artifactId>rdf4j-rio</artifactId>
+            <version>4.2.3</version>
             <type>pom</type>
         </dependency>
         <dependency>
             <groupId>org.eclipse.rdf4j</groupId>
-            <artifactId>rdf4j-repository</artifactId>
-            <version>3.7.4</version>
+            <artifactId>rdf4j-repository-api</artifactId>
+            <version>4.2.3</version>
         </dependency>
         <dependency>
             <groupId>org.eclipse.rdf4j</groupId>
-            <artifactId>rdf4j-rio</artifactId>
-            <version>3.7.4</version>
+            <artifactId>rdf4j-repository-sail</artifactId>
+            <version>4.2.3</version>
         </dependency>
-
-        <!-- https://mvnrepository.com/artifact/org.eclipse.rdf4j/rdf4j-shacl -->
+        <dependency>
+            <groupId>org.eclipse.rdf4j</groupId>
+            <artifactId>rdf4j-sail-memory</artifactId>
+            <version>4.2.3</version>
+        </dependency>
         <dependency>
             <groupId>org.eclipse.rdf4j</groupId>
             <artifactId>rdf4j-shacl</artifactId>
-            <version>3.7.4</version>
+            <version>4.2.3</version>
         </dependency>
+
 
     </dependencies>
     <properties>
